added in resume to the about page

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # configs
 
 # Basic
-name:               "Eddible"
+name:               "Eddie"
 
 
 
@@ -43,6 +43,8 @@ kramdown:
 
 # Navigation
 nav:
+  - name:           "Home"
+    url:            "/"
   - name:           "About"
     url:            "/about"
   - name:           "Archive"
