--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
 
 # URL
 #url:                "https://AWEEKJ.github.io" # the base hostname & protocol for your site
-url:                "http://localhost:4000" # use this url when develop
+url:                "https://eddible.net" # use this url when develop
 baseurl:            "" # the subpath of your site, e.g. /blog
 
 
