--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ author:
 #   id:               "your-id"
 
 # URL
-#url:                "https://AWEEKJ.github.io" # the base hostname & protocol for your site
-url:                "https://eddible.net" # use this url when develop
-baseurl:            "" # the subpath of your site, e.g. /blog
+url:                "https://cuffery.github.io" # the base hostname & protocol for your site
+#url:                "http://localhost:4000" # use this url when develop
+baseurl:            "/eddible" # the subpath of your site, e.g. /blog
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
