--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
 # URL
 url:                "https://cuffery.github.io" # the base hostname & protocol for your site
 #url:                "http://localhost:4000" # use this url when develop
-baseurl:            "/eddible" # the subpath of your site, e.g. /blog
+#baseurl:            "/eddible" # the subpath of your site, e.g. /blog
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
